--- a/bookyBack/GestionLivres/src/main/resources/application.properties
+++ b/bookyBack/GestionLivres/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.password=
 spring.datasource.url=jdbc:h2:file:./Database/Data/Livres
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto = update
+spring.security.enabled=false
 
 server.port=8095
 # Config Client configuration
