--- a/bookyBack/ServerConfig/src/main/resources/config/Booki.properties
+++ b/bookyBack/ServerConfig/src/main/resources/config/Booki.properties
@@ -1,5 +1,7 @@
 # Database
+#spring.datasource.url=jdbc:mysql://localhost:3307/cart?createDatabaseIfNotExist=true
 spring.datasource.url=jdbc:mysql://localhost:3306/cart?createDatabaseIfNotExist=true
+
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
