--- a/bookyBack/ServerConfig/src/main/resources/config/USER-SERVICE.properties
+++ b/bookyBack/ServerConfig/src/main/resources/config/USER-SERVICE.properties
@@ -2,7 +2,9 @@
 server.port=8081
 
 # Database
+#spring.datasource.url=jdbc:mysql://localhost:3307/user_db?createDatabaseIfNotExist=true
 spring.datasource.url=jdbc:mysql://localhost:3306/user_db?createDatabaseIfNotExist=true
+
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
