--- a/bookyBack/ServerConfig/src/main/resources/config/bookstore.properties
+++ b/bookyBack/ServerConfig/src/main/resources/config/bookstore.properties
@@ -1,8 +1,10 @@
 
 server.port=8085
 
-
+#spring.datasource.url=jdbc:mysql://localhost:3307/bookstore?createDatabaseIfNotExist=true
 spring.datasource.url=jdbc:mysql://localhost:3306/bookstore?createDatabaseIfNotExist=true
+
+#spring.datasource.url=jdbc:mysql://localhost:3307/bookstore?createDatabaseIfNotExist=true
 spring.datasource.username=root
 
 spring.cloud.config.enabled=false
