--- a/bookyBack/User/src/main/resources/application.properties
+++ b/bookyBack/User/src/main/resources/application.properties
@@ -11,6 +11,10 @@ server.port=8081
 
 # Database
 spring.datasource.url=jdbc:mysql://localhost:3306/user_db?createDatabaseIfNotExist=true
+
+#Version soulayma
+#spring.datasource.url=jdbc:mysql://localhost:3307/user_db?createDatabaseIfNotExist=true
+
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
