--- a/bookyFront/package.json
+++ b/bookyFront/package.json
@@ -23,6 +23,7 @@
     "angularx-qrcode": "^16.0.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
+    "keycloak-js": "^21.1.2",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.6",
     "tslib": "^2.3.0",
