--- a/bookyFront/tsconfig.json
+++ b/bookyFront/tsconfig.json
@@ -18,6 +18,9 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "types":[],
     "lib": [
       "ES2022",
       "dom"
